--- a/style/categories.css
+++ b/style/categories.css
@@ -7,3 +7,14 @@
   font-size: 50px;
   margin-bottom: 38px;
 }
+
+
+@media(max-width: 1700px) {
+  .categories__item {
+    margin-bottom: 84px;
+  }
+
+  .categoties__title {
+    margin-bottom: 30px;
+  }
+}
