--- a/style/hero.css
+++ b/style/hero.css
@@ -25,6 +25,32 @@
   margin-bottom: 135px;
 }
 
-.hero__list-steps {
+@media (max-width: 1700px) {
+  .hero__title {
+    font-size: 200px;
+    margin-bottom: 12;
+  }
 
+  .hero__description {
+    font-size: 42px;
+    max-width: 860px;
+    margin-bottom: 66px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .hero {
+    padding: 32px 0;
+  }
+
+  .hero__title {
+    font-size: 150px;
+    margin-bottom: 0;
+  }
+
+  .hero__description {
+    font-size: 36px;
+    max-width: 770px;
+    margin-bottom: 32px;
+  }
 }
