--- a/style/profile.css
+++ b/style/profile.css
@@ -33,8 +33,29 @@
   display: flex;
   align-items: center;
   font-size: 32px;
+  gap: 7px;
 }
 
 .profile__edit-icon {
   margin-right: 7px;
+}
+
+@media(max-width: 1200px) {
+  .profile__avatar {
+    max-width: 466px;
+    margin-right: 34px;
+  }
+  
+  .profile__content {
+    padding-bottom: 145px;
+  }
+  
+  .profile__birthday {
+    font-size: 32px;
+    margin-bottom: 12px;
+  }
+  
+  .profile__edit {
+    gap: 2px;
+  }
 }
