--- a/style/style.css
+++ b/style/style.css
@@ -94,3 +94,22 @@ fieldset {
   color: #ffffff;
 }
 
+@media(max-width: 1700px) {
+  .container {
+    padding: 0 l32px;
+  }
+
+  .btn {
+    font-size: 28px;
+  }
+}
+
+@media(max-width: 1200px) {
+  .container {
+    padding: 0 22px;
+  }
+
+  .btn {
+    font-size: 24px;
+  }
+}
