--- a/style/hero.css
+++ b/style/hero.css
@@ -54,3 +54,15 @@
     margin-bottom: 32px;
   }
 }
+
+@media (max-width: 992px) {
+  .hero__title {
+    font-size: 118px;
+  }
+
+  .hero__description {
+    font-size: 26px;
+    max-width: 590px;
+    margin-bottom: 100px;
+  }
+}
