--- a/style/profile.css
+++ b/style/profile.css
@@ -59,3 +59,25 @@
     gap: 2px;
   }
 }
+
+@media(max-width: 992px) {
+  .profile__avatar {
+    max-width: 340px;
+    margin-right: 20px;
+  }
+  
+  .profile__content {
+    padding-bottom: 68px;
+  }
+  
+  .profile__birthday {
+    margin-bottom: 24px;
+  }
+  
+  .profile__edit {
+    gap: 7px;
+  }
+  .profile__edit-icon {
+    width: 30px;
+  }
+}
