--- a/style/wishlist.css
+++ b/style/wishlist.css
@@ -38,3 +38,24 @@
     margin-bottom: 84px;
   }
 }
+
+@media(max-width: 992px) {
+  .wishlist {
+    padding-top: 36px;
+    padding-bottom: 142px;
+  }
+  
+  .wishlist__description {
+    margin-bottom: 78px;
+  }
+
+  .wishlist__categories {
+    max-width: 544;
+    margin: 0 auto;
+  }
+
+  .wishlist__items {
+    grid-template-columns: 1fr;
+    gap: 34px;
+  }
+}
