--- a/style/categories.css
+++ b/style/categories.css
@@ -18,3 +18,14 @@
     margin-bottom: 30px;
   }
 }
+
+@media(max-width: 992px) {
+  .categories__item {
+    margin-bottom: 56px;
+  }
+
+  .categoties__title {
+    text-align: center;
+    margin-bottom: 56px;
+  }
+}
