дописал адаптив для @media 992px

--- a/style/edit.css
+++ b/style/edit.css
@@ -1,5 +1,5 @@
 .edit {
-  margin-bottom: 174px;
+  padding-bottom: 174px;
 }
 
 .edit__avatar {
@@ -222,5 +222,61 @@
 
   .edit__submit-btn {
     margin-right: 18px;
+  }
+}
+
+@media (max-width: 992px) {
+.edit {
+  padding-bottom: 80px;
+}
+  
+  .edit__avatar {
+    margin-bottom: 64px;
+  }
+
+  .edit__label-avatar {
+    font-size: 24px;
+    gap: 5px;
+  }
+
+  .edit__avatar-delete {
+    font-size: 24px;
+    gap: 5px;
+  }
+
+  .edit__icon-avatar {
+    flex: 0 0 30px;
+  }
+  
+  .edit__avatar-img {
+    max-width: 340px;
+    margin-right: 25px;
+  }
+
+  .edit__name {
+    gap: 44px;
+    margin-bottom: 44px;
+  }
+
+  .edit__birthdate {
+    margin-bottom: 44px;
+  }
+
+  .edit__desc-input {
+    min-height: 503px;
+  }
+
+  .edit__description {
+    margin-bottom: 62px;
+  }
+
+  .edit__wish-photo {
+    margin-bottom: 62px;
+  }
+
+  .edit__submit-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 44px 18px;
   }
 }
