написал адаптив под 740px для style, header, nav, hero

--- a/style/burger.css
+++ b/style/burger.css
@@ -62,3 +62,15 @@
   }
 }
 
+@media (max-width: 740x){
+  .burger {
+    width: 30px;
+    height: 25px;
+  }
+
+  .burger__line,
+  .burger:after,
+  .burger:before {
+    height: 3px;
+  }
+}
