--- a/style/header.css
+++ b/style/header.css
@@ -41,4 +41,17 @@
   }
 }
 
+@media(max-width: 740px) {
+  .header {
+    padding: 16px 0;
+  }
+
+  .header__logo {
+    width: 32px;
+    height: 32px;
+  }
+
+  
+}
+
 
