--- a/style/style.css
+++ b/style/style.css
@@ -119,3 +119,19 @@ fieldset {
     padding: 0 43px;
   }
 }
+
+@media(max-width: 740px) {
+  .container {
+    padding: 0 16px;
+  }
+
+  .btn {
+    font-size: 20px;
+  }
+
+  .btn_castling {
+    font-size: 24px;
+  }
+
+  
+}
