--- a/style/wishlist.css
+++ b/style/wishlist.css
@@ -44,6 +44,10 @@
     padding-top: 36px;
     padding-bottom: 142px;
   }
+
+  .wishlist__profile {
+    margin-bottom: 64px;
+  }
   
   .wishlist__description {
     margin-bottom: 78px;
@@ -57,5 +61,27 @@
   .wishlist__items {
     grid-template-columns: 1fr;
     gap: 34px;
+  }
+}
+
+@media(max-width: 740px) {
+  .wishlist {
+    padding-top: 16px;
+    padding-bottom: 46px;
+  }
+
+  .wishlist__profile {
+    margin-bottom: 32px;
+  }
+  
+  .wishlist__description {
+    font-size: 16px;
+    max-width: 420px;
+    margin: 0 auto 42px;
+    text-align: center;
+  }
+
+  .wishlist__items {
+    gap: 20px;
   }
 }
