--- a/style/nav.css
+++ b/style/nav.css
@@ -33,9 +33,9 @@
     transition: transform 0.5s ease-out;
   }
 
-  .nav.nav_active {
+  /* .nav.nav_active {
     transform: translateY(0);
-  }
+  } */
 
   .nav__btn {
     margin-right: 0;
