--- a/style/burger.css
+++ b/style/burger.css
@@ -2,8 +2,8 @@
   display: none;
 }
 
-@media (max-width: 992px){
-  .header__burger {
+@media (max-width: 992px) {
+  .burger {
     display: block;
     position: relative;
     width: 50px;
@@ -28,7 +28,7 @@
   .burger__line {
     top: 50%;
     transform: translateY(-50%);
-    transition: opacity 0.2s ease;
+    transition: opacity .2s ease;
   }
 
   .burger:after,
@@ -48,21 +48,20 @@
 
   .burger.burger_active .burger__line {
     opacity: 0;
-
   }
 
-  .burger.burger_active:after{
-    top: 50%;
-    transform: rotate(45deg);
-  }
-  
   .burger.burger_active:before {
     top: 50%;
-    transform: rotate(-45deg);  
-  }
+    transform: rotate(45deg)
+  } 
+
+  .burger.burger_active:after {
+    top: 50%;
+    transform: rotate(-45deg)
+  } 
 }
 
-@media (max-width: 740x){
+@media (max-width: 740px) {
   .burger {
     width: 30px;
     height: 25px;
