--- a/style/categories.css
+++ b/style/categories.css
@@ -1,42 +1,42 @@
 .categories__item {
-  margin-bottom: 80px;
+  margin-bottom: 78px;
 }
 
-.categoties__title {
+.categories__title {
   font-weight: 400;
   font-size: 50px;
   margin-bottom: 38px;
 }
 
-
-@media(max-width: 1700px) {
+@media (max-width: 1700px) {
   .categories__item {
     margin-bottom: 84px;
   }
 
-  .categoties__title {
+  .categories__title {
     margin-bottom: 30px;
   }
 }
 
-@media(max-width: 992px) {
+@media (max-width: 992px) {
   .categories__item {
     margin-bottom: 56px;
   }
 
-  .categoties__title {
+  .categories__title {
     text-align: center;
-    margin-bottom: 56px;
+    margin-bottom: 30px;
   }
 }
 
-@media(max-width: 740px) { 
+@media (max-width: 740px) {
   .categories__item {
     margin-bottom: 42px;
   }
 
-  .categoties__title {
-    margin-bottom: 22px;
+  .categories__title {
     font-size: 32px;
+    margin-bottom: 22px;
   }
 }
+
