--- a/style/edit.css
+++ b/style/edit.css
@@ -8,7 +8,7 @@
   margin-bottom: 113px;
 }
 
-.edit__avatar-img {
+.edit__avatar-image {
   max-width: 437px;
   width: 100%;
   border-radius: 50%;
@@ -21,6 +21,10 @@
   align-items: flex-start;
 }
 
+.edit__input-file {
+  display: none;
+}
+
 .edit__label-avatar {
   display: flex;
   gap: 2px;
@@ -28,10 +32,6 @@
   font-size: 38px;
   margin-bottom: 12px;
   cursor: pointer;
-}
-
-.edit__input-file {
-  display: none;
 }
 
 .edit__avatar-delete {
@@ -48,27 +48,27 @@
 }
 
 .edit__label {
-
   max-width: 686px;
 }
 
 .edit__label-text {
-  font-size: 50px;
   display: block;
+  font-size: 50px;
   margin-bottom: 14px;
 }
 
 .edit__input {
-  font-size: 50px;
-  background: #FFFFFF;
-  border-radius: 15px;
+  font-size: 48px;
   display: block;
   width: 100%;
   height: 100px;
+  background-color: #FFFFFF;
+  border-radius: 15px;
   color: #282828;
   padding: 0 32px;
   border: none;
 }
+
 
 .edit__birthdate {
   margin-bottom: 44px;
@@ -80,16 +80,16 @@
   position: relative;
 }
 
-.edit__label_select::after {
+.edit__label_select:after {
   content: '';
   display: block;
-  width: 34px;
-  height: 34px;
   position: absolute;
   right: 0;
   top: 50%;
   transform: translateY(-50%);
-  background-image: url('../img/arrow-dawn.svg');
+  width: 34px;
+  height: 34px;
+  background-image: url('../img/arrow-down.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -102,11 +102,11 @@
 
 .edit__select {
   appearance: none;
-  background-color: #fff;
   border-radius: 15px;
   cursor: pointer;
   font-size: 48px;
   color: #282828;
+  background-color: #FFFFFF;
   padding: 22px 50px 22px 32px;
   outline: none;
 }
@@ -115,7 +115,7 @@
   margin-bottom: 68px;
 }
 
-.edit__desc-input {
+.edit__description-input {
   max-width: 1420px;
   width: 100%;
   min-height: 250px;
@@ -132,7 +132,7 @@
 }
 
 .edit__submit-btn:last-child {
-  margin-right: 0px;
+  margin-right: 0;
 }
 
 .edit__wish {
@@ -140,9 +140,10 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 44px 36px;
   margin-bottom: 44px;
+
 }
 
-.edit__label-price {
+.edit__label_price {
   flex: 0 1 50%;
 }
 
@@ -151,6 +152,7 @@
   gap: 36px;
   align-items: flex-end;
 }
+
 
 .edit__select_currency {
   width: 100%;
@@ -183,12 +185,13 @@
   right: 8px;
 }
 
+
 @media (max-width: 1200px) {
   .edit__avatar {
     margin-bottom: 56px;
   }
 
-  .edit__avatar-img {
+  .edit__avatar-image {
     max-width: 466px;
     margin-right: 34px;
   }
@@ -203,7 +206,7 @@
     margin-bottom: 40px;
   }
 
-  .edit__desc-input {
+  .edit__description-input {
     min-height: 311px;
   }
 
@@ -233,6 +236,15 @@
     margin-bottom: 64px;
   }
 
+  .edit__avatar-image {
+    max-width: 340px;
+    margin-right: 25px;
+  }
+
+  .edit__icon-avatar {
+    flex: 0 0 30px;
+  }
+
   .edit__label-avatar {
     font-size: 24px;
     gap: 5px;
@@ -243,14 +255,7 @@
     gap: 5px;
   }
 
-  .edit__icon-avatar {
-    flex: 0 0 30px;
-  }
 
-  .edit__avatar-img {
-    max-width: 340px;
-    margin-right: 25px;
-  }
 
   .edit__name {
     gap: 44px;
@@ -261,7 +266,7 @@
     margin-bottom: 44px;
   }
 
-  .edit__desc-input {
+  .edit__description-input {
     min-height: 503px;
   }
 
@@ -292,7 +297,7 @@
     margin-bottom: 32px;
   }
 
-  .edit__avatar-img {
+  .edit__avatar-image {
     max-width: 160px;
     margin-right: 0;
     margin-bottom: 16px;
@@ -300,6 +305,7 @@
 
   .edit__icon-avatar {
     flex-basis: 16px;
+
   }
 
   .edit__label-avatar {
@@ -338,7 +344,7 @@
     margin-bottom: 24px;
   }
 
-  .edit__desc-input {
+  .edit__description-input {
     min-height: 288px;
   }
 
@@ -350,14 +356,14 @@
     border-radius: 8px;
     font-size: 20px;
     padding: 12px 27px 12px 18px;
-  }
+  } 
 
-  .edit__label_select::after {
+  .edit__label_select:after {
     width: 18px;
     height: 18px;
   }
 
-  .edit__wish {
+  .edit__wish{
     gap: 24px;
   }
 
@@ -374,6 +380,7 @@
     height: 288px;
     margin-bottom: 32px;
   }
+
 
   .edit__submit-wrapper {
     gap: 24px;
