--- a/style/profile.css
+++ b/style/profile.css
@@ -12,21 +12,20 @@
 
 .profile__content {
   display: flex;
+  align-items: flex-start;
   flex-direction: column;
-  align-items: start;
   padding-bottom: 78px;
 }
 
 .profile__fullname {
-  font-size: 50px;
   font-weight: 400;
+  font-size: 50px;
   margin-bottom: 12px;
 }
 
 .profile__birthday {
   font-size: 38px;
   margin-bottom: 44px;
-  font-size: 38px;
 }
 
 .profile__edit {
@@ -37,86 +36,81 @@
   gap: 7px;
 }
 
-.profile__edit-icon {
-  margin-right: 7px;
-}
-
-@media(max-width: 1200px) {
+@media (max-width: 1200px) {
   .profile__avatar {
     max-width: 466px;
     margin-right: 34px;
   }
-  
+
   .profile__content {
     padding-bottom: 145px;
   }
-  
+
   .profile__birthday {
     font-size: 32px;
     margin-bottom: 12px;
   }
-  
+
   .profile__edit {
     gap: 2px;
   }
 }
 
-@media(max-width: 992px) {
+@media (max-width: 992px) {
   .profile__avatar {
     max-width: 340px;
     margin-right: 20px;
   }
-  
+
   .profile__content {
     padding-bottom: 68px;
   }
 
-  .profile__fullname {
-    font-size: 48px;
-  }
-  
   .profile__birthday {
     margin-bottom: 24px;
   }
-  
+
   .profile__edit {
     gap: 7px;
   }
+
   .profile__edit-icon {
     width: 30px;
   }
 }
 
-@media(max-width: 740px) {
+@media (max-width: 740px) {
   .profile {
     flex-direction: column;
     align-items: center;
   }
 
   .profile__avatar {
-    margin-bottom: 16px;
+    max-width: 160px;
     margin-right: 0;
-    min-width: 160px;
+    margin-bottom: 16px;
   }
-  
+
   .profile__content {
     padding-bottom: 0;
+    align-items: center;
   }
 
   .profile__fullname {
     margin-bottom: 4px;
     font-size: 36px;
   }
-  
+
   .profile__birthday {
     margin-bottom: 18px;
     font-size: 16px;
   }
-  
+
   .profile__edit {
     gap: 6px;
     font-size: 14px;
   }
+
   .profile__edit-icon {
     width: 16px;
   }
