--- a/style/wishlist.css
+++ b/style/wishlist.css
@@ -17,20 +17,21 @@
   gap: 50px 40px;
 }
 
-@media(max-width: 1700px) {
+@media (max-width: 1700px) {
   .wishlist__items {
     gap: 40px 30px;
   }
 }
 
-@media(max-width: 1200px) {
+@media (max-width: 1200px) {
+
   .wishlist__profile {
     margin-bottom: 56px;
   }
-
+  
   .wishlist__items {
-    gap: 30px 20px;
     grid-template-columns: repeat(2, 1fr);
+    gap: 30px 20px;
   }
 
   .wishlist__description {
@@ -39,7 +40,7 @@
   }
 }
 
-@media(max-width: 992px) {
+@media (max-width: 992px) {
   .wishlist {
     padding-top: 36px;
     padding-bottom: 142px;
@@ -48,13 +49,13 @@
   .wishlist__profile {
     margin-bottom: 64px;
   }
-  
+
   .wishlist__description {
     margin-bottom: 78px;
   }
-
+  
   .wishlist__categories {
-    max-width: 544;
+    max-width: 544px;
     margin: 0 auto;
   }
 
@@ -64,7 +65,7 @@
   }
 }
 
-@media(max-width: 740px) {
+@media (max-width: 740px) {
   .wishlist {
     padding-top: 16px;
     padding-bottom: 46px;
@@ -73,7 +74,7 @@
   .wishlist__profile {
     margin-bottom: 32px;
   }
-  
+
   .wishlist__description {
     font-size: 16px;
     max-width: 420px;
