написал функцию createBurgerMenu, начал писать функцию renderModal - рендер модального окна через js

--- a/style/burger.css
+++ b/style/burger.css
@@ -52,12 +52,12 @@
 
   .burger.burger_active:before {
     top: 50%;
-    transform: rotate(45deg)
+    transform: rotate(45deg);
   } 
 
   .burger.burger_active:after {
     top: 50%;
-    transform: rotate(-45deg)
+    transform: rotate(-45deg);
   } 
 }
 
