--- a/style/modal.css
+++ b/style/modal.css
@@ -1,7 +1,7 @@
 .modal {
   position: fixed;
   /* inset: 0; - растянуть по всем краям */
-  inset: 0; 
+  inset: 0;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
   cursor: pointer;
@@ -16,4 +16,77 @@
   margin: auto;
   background-color: #fff;
   color: #282828;
+  padding: 74px 116px 188px;
+  border-radius: 25px;
+  max-width: 1000px;
+}
+
+.modal__title {
+  font-weight: 400;
+  font-size: 64px;
+  margin-bottom: 48px;
+  text-align: center;
+}
+
+.modal__description {
+  text-align: center;
+  font-size: 41px;
+  font-weight: 300;
+  margin-bottom: 40px;
+}
+
+.modal__field {
+  margin-bottom: 66px;
+}
+
+.modal__label {
+  display: block;
+  margin-bottom: 32px;
+}
+
+.modal__label:last-child {
+  margin-bottom: 0;
+}
+
+.modal__input {
+  font-size: 48px;
+  display: block;
+  width: 100%;
+  height: 100px;
+  background-color: #FFFFFF;
+  color: #282828;
+  padding: 0 32px;
+  border: 3px solid #365ABA;
+  border-radius: 15px;
+}
+
+.modal__btn {
+  background-color: #365ABA;
+  color: #fff;
+  font-size: 59px;
+  width: 100%;
+  padding: 20px 40px;
+}
+
+.modal__close {
+  position: absolute;
+  top: 34px;
+  right: 34px;
+  cursor: pointer;
+  border: none;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  border-radius: 12px;
+}
+
+.modal__close:focus-visible {
+  outline-color: #365ABA;
+}
+
+@media (max-width: 740px) {
+  .edit__input {
+    font-size: 20px;
+    height: 47px;
+    padding: 0 18px;
+  }
 }
