написал стили модалки для адаптива под все разрешения

--- a/style/modal.css
+++ b/style/modal.css
@@ -52,10 +52,10 @@
   font-size: 48px;
   display: block;
   width: 100%;
-  height: 100px;
+  height: 120px;
   background-color: #FFFFFF;
   color: #282828;
-  padding: 0 32px;
+  padding: 0 38px;
   border: 3px solid #365ABA;
   border-radius: 15px;
 }
@@ -83,10 +83,111 @@
   outline-color: #365ABA;
 }
 
+@media (max-width: 1200px) {
+  .modal__main {
+    padding: 102px 40px 138px;
+    max-width: 700px;
+  }
+  
+  .modal__title {
+    font-size: 50px;
+    margin-bottom: 40px;
+  }
+  
+  .modal__description {
+    font-size: 34px;
+    margin-bottom: 52px;
+  }
+
+  .modal__field {
+    margin-bottom: 74px;
+  }
+  
+  .modal__label {
+    margin-bottom: 24px;
+  }
+
+  .modal__input {
+    height: 100px;
+    padding: 0 36px;
+  }
+
+  .modal__btn {
+    font-size: 48px;
+  }
+  
+  .modal__close {
+    top: 28px;
+    right: 28px;
+  }
+}
+
+@media (max-width: 992px) {
+  .modal__main {
+    padding: 102px 40px;
+    max-width: 600px;
+  }
+  
+  .modal__description {
+    margin-bottom: 56px;
+  }
+  
+  .modal__field {
+    margin-bottom: 62px;
+  }
+
+  .modal__input {
+    font-size: 32px;
+  }
+  
+  .modal__btn {
+    font-size: 36px;
+  }
+}
+
 @media (max-width: 740px) {
-  .edit__input {
-    font-size: 20px;
-    height: 47px;
-    padding: 0 18px;
+  .modal {
+    padding: 10px;
+  }
+
+  .modal__main {
+    padding: 70px 16px 42px;
+    border-radius: 15px;
+  }
+  
+  .modal__title {
+    font-size: 36px;
+    margin-bottom: 14px;
+  }
+  
+  .modal__description {
+    font-size: 18px;
+    margin-bottom: 17px;
+  }
+  
+  .modal__field {
+    margin-bottom: 18px;
+  }
+  
+  .modal__label {
+    margin-bottom: 12px;
+  }
+
+  .modal__input {
+    font-size: 24px;
+    padding: 0 20px;
+    height: 60px;
+  }
+  
+  .modal__btn {
+    font-size: 24px;
+    padding: 20px 15px;
+  }
+  
+  .modal__close {
+    width: 34px;
+    height: 34px;
+    top: 16px;
+    right: 16px;
   }
 }
