загрузка аватарки и отправка данных на сервер, мелкие правки

--- a/style/edit.css
+++ b/style/edit.css
@@ -9,10 +9,11 @@
 }
 
 .edit__avatar-image {
-  max-width: 437px;
-  width: 100%;
+  width: 437px;
+  height: 437px;
   border-radius: 50%;
   margin-right: 106px;
+  object-fit: cover;
 }
 
 .edit__avatar-load {
@@ -195,7 +196,8 @@
   }
 
   .edit__avatar-image {
-    max-width: 466px;
+    width: 466px;
+    height: 466px;
     margin-right: 34px;
   }
 
@@ -240,7 +242,8 @@
   }
 
   .edit__avatar-image {
-    max-width: 340px;
+    width: 340px;
+    height: 340px;
     margin-right: 25px;
   }
 
@@ -301,7 +304,8 @@
   }
 
   .edit__avatar-image {
-    max-width: 160px;
+    width: 160px;
+    height: 160px;
     margin-right: 0;
     margin-bottom: 16px;
   }
@@ -359,14 +363,14 @@
     border-radius: 8px;
     font-size: 20px;
     padding: 12px 27px 12px 18px;
-  } 
+  }
 
   .edit__label_select:after {
     width: 18px;
     height: 18px;
   }
 
-  .edit__wish{
+  .edit__wish {
     gap: 24px;
   }
 
